tests/baselines/reference/parserConstructorAmbiguity3.errors.txt
tests/cases/conformance/parser/ecmascript5/Generics/parserConstructorAmbiguity3.ts(1,10): error TS2304: Cannot find name 'A'.
tests/cases/conformance/parser/ecmascript5/Generics/parserConstructorAmbiguity3.ts(1,10): error TS2738: No overload expects 1 type arguments, but an overload does exist that expects 0 type arguments.
tests/cases/conformance/parser/ecmascript5/Generics/parserConstructorAmbiguity3.ts(1,12): error TS1005: '(' expected.


==== tests/cases/conformance/parser/ecmascript5/Generics/parserConstructorAmbiguity3.ts (3 errors) ====
    new Date<A>
             ~
!!! error TS2304: Cannot find name 'A'.
             ~
!!! error TS2738: No overload expects 1 type arguments, but an overload does exist that expects 0 type arguments.
               
!!! error TS1005: '(' expected.